--- a/FreshdeskApi.Demo/FreshdeskApi.Demo.csproj
+++ b/FreshdeskApi.Demo/FreshdeskApi.Demo.csproj
@@ -11,6 +11,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.Hosting" Version="8.0.0" />
+    <PackageReference Include="System.Linq.Async" Version="6.0.1" />
   </ItemGroup>
 
   <ItemGroup>
